--- a/party-chat.html
+++ b/party-chat.html
@@ -73,9 +73,9 @@
         
         </div> 
         
-        <video width="100%" autoplay muted loop>
-          <source src="https://i.imgur.com/wVkswWV.gif" type="video/mp4">
-        </video>
+        <div class="full-image loading-icon">
+          <img src="https://i.imgur.com/CRqkBZq.gif">
+        </div>
       </div>
 
       <div class="art-section"><br>
@@ -105,25 +105,32 @@
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J8EfF/5420a50601.mp4" type="video/mp4">
         </video></div>
-        <div class="half-image loading-icon">
-          <img src="https://i.imgur.com/PUaLgCs.jpeg">
-        </div>
 
         <div class="full-image loading-icon">
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7lnV/cc7523b0ae.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EmW/6686b2a31c.mp4" type="video/mp4">
         </video>
         </div>
 
+        <div class="full-image loading-icon">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/J8En4/dc1a14ac93.mp4" type="video/mp4">
+          </video>
+          </div>
+
         <div class="half-image loading-icon">
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7lp1/a8ce79f23d.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EmG/d7f74b6854.mp4" type="video/mp4">
         </video></div>
 
         <div class="half-image loading-icon">
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7lp8/39d8cf16a8.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EmO/b141349541.mp4" type="video/mp4">
         </video></div>
+
+        <div class="full-image loading-icon">
+          <img src="https://i.imgur.com/PUaLgCs.jpeg">
+        </div>
 
       </div>
 
