--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -112,10 +112,10 @@
         <video width="100%" autoplay muted loop>
           <source src="
           https://puu.sh/J8E63/67426d7343.mp4" type="video/mp4">
-        </video>
+        </video><br>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J8E6E/e45857804a.mp4" type="video/mp4">
-        </video>
+        </video><br>
          <!-- Row 4 -->
          <div class="art-sub-header"><br>
           <p>Multiple name bars were created for use with up to 4 hosts.  These namebars were templatized so that the video editor(s) could toggle on and off up to 4 namebars.</p>
