--- a/party-chat.html
+++ b/party-chat.html
@@ -102,10 +102,6 @@
           <!-- Row 0 -->
           <div class="full-image loading-icon">
 
-        <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/J8EfF/5420a50601.mp4" type="video/mp4">
-        </video></div>
-
         <div class="full-image loading-icon">
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J8EmW/6686b2a31c.mp4" type="video/mp4">
@@ -115,6 +111,7 @@
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
             <source src="https://puu.sh/J8En4/dc1a14ac93.mp4" type="video/mp4">
+            <source src="https://puu.sh/J8EmG/d7f74b6854.mp4" type="video/mp4">
           </video>
           </div>
 
