--- a/unfiltered.html
+++ b/unfiltered.html
@@ -74,7 +74,7 @@
         </div> 
         
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7Mj9/ffa7b4ec52.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EDn/94edc16263.mp4" type="video/mp4">
         </video>
       </div>
 
@@ -86,15 +86,15 @@
         
         </div> 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7Mkc/aa5f777dff.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EDG/66bec09e7f.mp4" type="video/mp4">
         </video>
 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7Mkl/ae6448c4a8.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EDN/ff321d956d.mp4" type="video/mp4">
         </video>
 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7MkW/efdd0ce226.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EDU/622c432c02.mp4" type="video/mp4">
         </video>
       </div>
 
@@ -111,7 +111,7 @@
           <div class="full-image loading-icon">
 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7MlR/c7ab2ffe86.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EE1/145ff54c14.mp4" type="video/mp4">
         </video></div>
 
 
