--- a/gaming.html
+++ b/gaming.html
@@ -116,10 +116,10 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter-outro-v2_orig.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
+          <img src="https://i.imgur.com/BHFleop.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/cyolism-outro_orig.gif">
+          <img src="https://i.imgur.com/sgVAQcA.gif">
         </div>
         <!-- Row 6 -->
         <div class="half-image loading-icon">
