--- a/gaming.html
+++ b/gaming.html
@@ -56,6 +56,12 @@
           Static character art was provided by clients with permission to animate.</p>
       </div>
       <div class="art-display">
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/zo-stream-ending-cat_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pride-starting-soon_orig.gif">
+        </div>
         <!-- Row 1 -->
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/vixella-540_orig.gif">
@@ -85,7 +91,7 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/kumateddi-for-tumblr_orig.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/c5ccb1bc950e6742a756f89b77a313ac/tumblr_pv276yUUUh1vihf3to1_540.gif">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberri-starting-soon-screen_orig.gif">
         </div>
         <!-- Row 4 -->
         <div class="half-image loading-icon">
@@ -123,7 +129,7 @@
         </div>
         <!-- Row 6 -->
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lasean-outro_orig.gif">
+          <img src="https://i.imgur.com/duNqn44.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/YP2UvaTRT2oUaz8HnR/source.gif">
