--- a/gaming.html
+++ b/gaming.html
@@ -57,18 +57,19 @@
       </div>
       <div class="art-display">
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/zo-stream-ending-cat_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pride-starting-soon_orig.gif">
-        </div>
-        <!-- Row 1 -->
-        <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/vixella-540_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif">
         </div>
+        <!-- Row 1 -->
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/zo-stream-ending-cat_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pride-starting-soon_orig.gif">
+        </div>
+
         <!-- Row 2 -->
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/540_orig.gif">
@@ -143,7 +144,7 @@
 
 
         <div class="art-sub-header">
-          <p>Twitch commissions for streamers.</p>
+          <p>Stream alert commissions.</p>
         </div>
           <div class="half-image loading-icon">
             <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter_orig.gif">
