--- a/ads.html
+++ b/ads.html
@@ -69,11 +69,6 @@
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/0d66ff450306881a52866774f373bd60/tumblr_pj19b9EUTD1tmp8rdo5_r1_1280.jpg">
           </div>
-        <div class="full-image loading-icon">
-          <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/GoGJN/65001a3f5b.mp4" type="video/mp4">
-          </video>
-        </div>
         <!--Row 2-->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/55d59c3d5c1b226da1f8ca86fe862a23/tumblr_pj19b9EUTD1tmp8rdo6_r1_1280.png">
@@ -121,13 +116,13 @@
     <!-- Section 5 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>Mortise & Double Box</h2>
-        <p>Livestream overlays for events like E3 and San Diego Comic-Con. Note: I did not create the pink cubes and the red stroke not part of my design.</p>
+        <h2>Mortises</h2>
+        <p>Livestream overlays for events like E3 and San Diego Comic-Con. Note: I did not create the branded artwork.</p>
       </div>
       <div class="art-display">
         <!--Row 1-->
         <div class="full-image loading-icon">
-            <img src="https://66.media.tumblr.com/1bb2da981ff264daa9987903066debef/tumblr_puhqxybCLc1tmp8rdo5_r1_1280.png">
+            <img src="https://i.imgur.com/u18mqEX.jpeg">
         </div>
         <!--Row 2-->
         <div class="full-image loading-icon">
@@ -179,20 +174,6 @@
     </div>
 
 
-    <!-- Section 5 -->
-    <div class="art-section">
-      <div class="art-header">
-        <h2>BIG REVEAL</h2>
-        <p>Big Reveals are 1113 x 800px responsive units that appear on native article pages.</p>
-      </div>
-      <div class="art-display">
-        <div class="full-image loading-icon">
-          <img src="https://66.media.tumblr.com/645c4b0fb1dcc1c224b18f01b4c1ec7a/tumblr_plgd0eA6Jw1tmp8rdo7_r1_1280.jpg">
-        </div>
-      </div>
-    </div>
-
-
         <!-- Section 3 -->
         <div class="art-section">
             <div class="art-header">
@@ -220,17 +201,6 @@
               </div>
               <div class="half-image loading-icon">
                 <img src="https://66.media.tumblr.com/ffcdf180aeab75cf21b2bc06e98896bc/tumblr_pizj5dUNwY1tmp8rdo7_1280.jpg">
-              </div>
-              <!--Row 4-->
-              <div class="half-image loading-icon">
-                <img src="https://66.media.tumblr.com/fb99b06d71b28d32e4affc0223742dc2/tumblr_pizj5dUNwY1tmp8rdo1_640.jpg">
-              </div>
-              <div class="half-image loading-icon">
-                <img src="https://66.media.tumblr.com/40c8b1c62a99710808d57e3b703b1d1f/tumblr_pizj49eSnk1tmp8rdo7_640.jpg">
-              </div>
-              <!--Row 5-->
-              <div class="half-image loading-icon">
-                <img src="https://66.media.tumblr.com/de3517a59f12d2956145acf18bd7505b/tumblr_pizj49eSnk1tmp8rdo5_640.jpg">
               </div>
               <div class="half-image loading-icon">
                 <img src="https://66.media.tumblr.com/cc2cd6d2ed869afa45f0ec8bc7bd22b4/tumblr_pizj49eSnk1tmp8rdo9_1280.png">
