--- a/ads.html
+++ b/ads.html
@@ -85,12 +85,6 @@
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/0a6c9452b7437283b3ef8a2b347ceddb/tumblr_puhqxybCLc1tmp8rdo3_r1_1280.png">
         </div>
-        <!--Row 6-->
-        <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/03398660a0ab4de3284296baa9cf4963/tumblr_pj17etb3MV1tmp8rdo7_r1_500.jpg">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/07b0e0e2f9d3f194efc9c0862926ae5a/tumblr_pj17etb3MV1tmp8rdo8_r1_500.jpg">
         </div>
         <!--Row 6-->
         <div class="half-image loading-icon">
@@ -229,6 +223,9 @@
               <!--Row 9-->
               <div class="half-image loading-icon">
                 <img src="https://66.media.tumblr.com/e22d4ab3eb00396afe9a6ff1858b7e51/tumblr_pizj49eSnk1tmp8rdo3_640.png">
+              </div>
+              <div class="half-image loading-icon">
+                <img src="https://i.imgur.com/ReiHEuX.png">
               </div>
             </div>
           </div>
