--- a/ads.html
+++ b/ads.html
@@ -91,16 +91,34 @@
           <div class="half-image loading-icon">
             <img src="https://66.media.tumblr.com/54bde8daf9500aed08e7e0921e63cdd6/tumblr_pj19b9EUTD1tmp8rdo7_r1_640.jpg">
           </div>
-        <!--Row 7-->
-        <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/217ae28cd0b407372a191674e17821e5/tumblr_puhqxybCLc1tmp8rdo1_1280.png">
-        </div>
-        <!--Row 8-->
-        <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/9d198db896a902158bcfce654198c6fe/tumblr_pj19b9EUTD1tmp8rdo4_r2_1280.jpg">
-        </div>
       </div>
     </div>
+
+
+    <!-- Section 5 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Quicksilvers</h2>
+        <p>Quicksilvers are responsive ads that expand and contract when the user scrolls.</p>
+      </div>
+      <div class="art-display">
+        <!--Row 1-->
+        <div class="full-image loading-icon">
+            <img src="https://i.imgur.com/qYteoAG.jpeg">
+        </div>
+        <!--Row 2-->
+        <div class="full-image loading-icon">
+            <img src="https://i.imgur.com/xfF5jAf.jpeg">
+        </div>
+         <!--Row 3-->
+        <div class="full-image loading-icon">
+            <img src="https://i.imgur.com/WhQjJLf.jpeg">
+        </div>
+        
+      </div>
+    </div>
+
+
 
     <!-- Section 5 -->
     <div class="art-section">
