--- a/ads.html
+++ b/ads.html
@@ -104,15 +104,15 @@
       <div class="art-display">
         <!--Row 1-->
         <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/qYteoAG.jpeg">
+            <img src="https://i.imgur.com/O3D57jq.jpeg">
         </div>
         <!--Row 2-->
         <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/xfF5jAf.jpeg">
+            <img src="https://i.imgur.com/FeMyUeq.jpeg">
         </div>
          <!--Row 3-->
         <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/WhQjJLf.jpeg">
+            <img src="https://i.imgur.com/2dd7MHx.jpeg">
         </div>
         
       </div>
