--- a/ads.html
+++ b/ads.html
@@ -108,11 +108,11 @@
         </div>
         <!--Row 2-->
         <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/HeMG3Kc.jpeg">
+            <img src="https://i.imgur.com/nnShr6t.jpeg">
         </div>
          <!--Row 3-->
         <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/oDuh9LF.jpeg">
+            <img src="https://i.imgur.com/oDruErW.jpeg">
         </div>
         
       </div>
