--- a/art.html
+++ b/art.html
@@ -57,8 +57,11 @@
       <div class="art-display">
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/J8DZZ/b6dd268b0e.mp4" type="video/mp4">
+            <source src="https://puu.sh/J8MyU/e5baf52da6.mp4" type="video/mp4">
           </video>
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/rHKr9RR.png">
         </div>
          <!-- Row 0 -->
          <div class="half-image loading-icon">
@@ -150,9 +153,7 @@
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3445208/ice-cream-dribbble.png">
         </div>
-        <div class="half-image loading-icon">
-          <img src="https://i.imgur.com/rHKr9RR.png">
-        </div>
+
       </div>
       <hr>
     </div>
