--- a/party-chat.html
+++ b/party-chat.html
@@ -100,8 +100,6 @@
 
         <div class="art-display">
           <!-- Row 0 -->
-          <div class="full-image loading-icon">
-
         <div class="full-image loading-icon">
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J8EmW/6686b2a31c.mp4" type="video/mp4">
@@ -117,6 +115,11 @@
         <div class="half-image loading-icon">
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J8EmG/d7f74b6854.mp4" type="video/mp4">
+        </video></div>
+        
+        <div class="half-image loading-icon">
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/J8EmO/b141349541.mp4" type="video/mp4">
         </video></div>
 
         <div class="full-image loading-icon">
