--- a/index.html
+++ b/index.html
@@ -114,7 +114,21 @@
             <span>Motion Manga, Art, and GIFs (for fun!)</span>
           </a>
         </div>
-        
+
+
+        <div class="item">
+          <a href="stinger.html">
+            <div class="image-container loading-icon"><img src="https://i.imgur.com/fMLhMAa.gif" alt="motion manga"></div>
+            <span>Stingers / Transitions</span>
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="dgst.html">
+            <div class="image-container loading-icon"><img src="https://i.imgur.com/ZbwUHlS.gif" alt="motion manga"></div>
+            <span>Ace Attorney Fanzine Trailer</span>
+          </a>
+        </div>
 
 
       <div class="item">
