--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
       <a href="gaming.html">
         <div class="image-container loading-icon"><img src="https://puu.sh/I6dI7/d4e06908cd.gif" alt="gaming"></div>
         <span>Youtube and Twitch Commissions</span>
-
-
-        <div class="item">
-          <a href="stinger.html">
-            <div class="image-container loading-icon"><img src="https://i.imgur.com/fMLhMAa.gif" alt="motion manga"></div>
-            <span>Stingers / Transitions</span>
-          </a>
-        </div>
-    
+        
+      </a>
+    </div>
+    <div class="item">
+      <a href="twitch.html">
+        <div class="image-container loading-icon"><img src="https://puu.sh/I6dl5/4d97e304b0.gif" alt="miniscroller"></div>
+        <span>Twitch Channel Branding</span>
+      </a>
+    </div>
 
     <div class="item">
       <a href="devs-react.html">
@@ -115,6 +115,13 @@
           </a>
         </div>
 
+
+        <div class="item">
+          <a href="stinger.html">
+            <div class="image-container loading-icon"><img src="https://i.imgur.com/fMLhMAa.gif" alt="motion manga"></div>
+            <span>Stingers / Transitions</span>
+          </a>
+        </div>
 
         <div class="item">
           <a href="dgst.html">
