--- a/stinger.html
+++ b/stinger.html
@@ -73,7 +73,18 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/stinger-sample-3_orig.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/stinger-sample-2_orig.gif">
+          <img src="https://i.imgur.com/9bg4cDB.gif">
+        </div>
+                <!-- Row 1 -->
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/MoIqAQr.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/cjAlSVj.gif">
+        </div>
+                <!-- Row 1 -->
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/3BFtKSI.gif">
         </div>
         
 
