--- a/gaming.html
+++ b/gaming.html
@@ -89,7 +89,7 @@
           <img src="https://media.giphy.com/media/k72Phd9MkDVDmobRtr/giphy.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/kumateddi-for-tumblr_orig.gif">
+          <img src="https://i.imgur.com/FKIjfcw.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberri-starting-soon-screen_orig.gif">
@@ -106,7 +106,7 @@
           <img src="https://media.giphy.com/media/8cddMic7kpmOFU7qZY/giphy.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/3b297911a362f27f4ce7020aea910304/tumblr_pmffnpw9Yx1vihf3to1_540.gif">
+          <img src="https://i.imgur.com/autUpcp.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/9DruQECt28WbK5iIpa/giphy.gif">
