--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://i.imgur.com/2p17l7r.png">
+        <img src="https://imgur.com/7GzE7fz">
       </div>
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
@@ -58,7 +58,7 @@
           <p>Outside of work, I do freelance work for clients ranging from YouTube content creators to Twitch streamers and vtubers. </p>
           <p>In my free time, you can find me scrolling through the depths of TikTok, streaming Genshin Impact on Twitch, and swimming among my hoarde of plushies.  If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
 
-          <h2><a class="active-link" href="https://drive.google.com/file/d/1jDKiI9BGHUxvT6XMgXuB8B7DAMeE9R3z/view?usp=sharing"><u>View my resume</u></a></h2>
+          <h1><a class="active-link" href="https://drive.google.com/file/d/1jDKiI9BGHUxvT6XMgXuB8B7DAMeE9R3z/view?usp=sharing"><u>View my resume</u></a></h1>
       </div>
     </div>
   
