--- a/stinger.html
+++ b/stinger.html
@@ -72,6 +72,20 @@
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/stinger-sample-3_orig.gif">
         </div>
+         <!-- Row 1 -->
+         <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/dHmNlY7.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/VNs6ppm.gif">
+        </div>
+                 <!-- Row 1 -->
+         <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/10xaU1N.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/7tnI56c.gif">
+        </div>
         <!-- Row 1 -->
         <div class="half-image loading-icon">
           <img src="https://i.imgur.com/3BFtKSI.gif">
@@ -86,6 +100,7 @@
         <div class="half-image loading-icon">
           <img src="https://i.imgur.com/cjAlSVj.gif">
         </div>
+        
         
 
 
