--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="item">
           <a href="dgst.html">
-            <div class="image-container loading-icon"><img src="https://i.imgur.com/ZbwUHlS.gif" alt="motion manga"></div>
+            <div class="image-container loading-icon"><img src="https://i.imgur.com/8tZigq1.gif" alt="motion manga"></div>
             <span>Ace Attorney Fanzine Trailer</span>
           </a>
         </div>
