--- a/gaming.html
+++ b/gaming.html
@@ -78,11 +78,16 @@
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/zo-stream-ending-cat_orig.gif">
         </div>
+        
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberri-starting-soon-screen_orig.gif">
+          <img src="https://i.imgur.com/YynSuy1.gif">
         </div>
+
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/4H1AvX2Z3bnmPH9laD/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberri-starting-soon-screen_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/20NVx9H6CZvQ7U7NDD/giphy.gif">
