--- a/dgst.html
+++ b/dgst.html
@@ -52,9 +52,9 @@
     <div class="art-section">
         <div class="art-sub-header">
           <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/fiFZwUe.png" width=95%>
+            <img src="https://i.imgur.com/xy0RFJi.png" width=95%>
           </div>
-          <p>I was commissioned to edit and animate the promotional triler for Wayfinder, an Ace Attorney fanzine featuring 50+ artists and 8+ writers. </p>
+          <p>I was commissioned to edit and animate the promotional triler for Wayfinder, an Ace Attorney travel themed fanzine featuring 50+ artists and 8+ writers. </p>
 <br>
           <p>Watch the full trailer below:</p>
         </div>
@@ -69,11 +69,11 @@
      
     <!-- Process -->
     <div class="art-section">
-        <h2>Intro</h2>
+        <h2>Highlights</h2>
       <div class="art-display">
         <!-- Intro -->
         <div class="art-sub-header">
-          <p>Once the logo was finalized by our senior designer (Justin Vachon), I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations. Frame by frame paint splatter animation by Jack Taylor.</p>
+          <p> Below are some highlighted segments from the trailer.</p>
 
         
         </div> 
