--- a/dgst.html
+++ b/dgst.html
@@ -53,7 +53,7 @@
         <div class="art-sub-header">
           <div class="full-image loading-icon">
             <img src="https://i.imgur.com/xy0RFJi.png" width=45%>
-          </div>
+          </div><br>
           <p>I was commissioned to edit and animate the promotional triler for Wayfinder, an Ace Attorney travel themed fanzine featuring 50+ artists and 8+ writers. </p>
 <br>
           <p>Watch the full trailer below:</p>
@@ -78,29 +78,24 @@
         
         </div> 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/J8E75/60300cb098.mp4" type="video/mp4">
+          <source src="https://puu.sh/J9HzZ/39ced80f04.mp4" type="video/mp4">
         </video>
       </div>
 
+    </div> 
+    <video width="100%" autoplay muted loop>
+      <source src="https://puu.sh/J9HAd/177d7eba2a.mp4" type="video/mp4">
+    </video>
+  </div>
 
-        <!-- Transitions -->
-        <div class="art-display">
-        <div class="art-section">
-        <h2>Transitions</h2>
-        <div class="art-sub-header">
-          <p>Early transition drafts focused on the paint splatters covering the screen, but it was narrowed down to multicolored triangles from the logo and a wipe over the abstract memphis background from the intro.</p>
-        </div>
-        <div class="full-image">
-          <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/J8E7r/3691208413.mp4" type="video/mp4">
-          </video>
-        </div>
-        <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/J8E9g/477c057aa4.mp4" type="video/mp4">
-        </video>
-          <div class="full-image loading-icon">
-          <img src="https://media.giphy.com/media/iDmFE3gwC6PBFAyUaS/source.gif">
-        </div></div>
+
+</div> 
+<video width="100%" autoplay muted loop>
+  <source src="https://puu.sh/J9HAf/be0bade2e5.mp4" type="video/mp4">
+</video>
+</div>
+
+
 
 
 
