--- a/dgst.html
+++ b/dgst.html
@@ -60,7 +60,7 @@
         </div>
         <div class="full-image loading-icon">
             <div class="embed-container">
-              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ua0jDRZw43w" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
           </div>
 <br>
