--- a/dgst.html
+++ b/dgst.html
@@ -79,11 +79,11 @@
 </div> 
 <video width="100%" autoplay muted loop>
   <source src="https://puu.sh/J9HzZ/39ced80f04.mp4" type="video/mp4">
-</video>
+</video><br>
 
 <video width="100%" autoplay muted loop>
   <source src="https://puu.sh/J9HAd/177d7eba2a.mp44" type="video/mp4">
-</video>
+</video><br>
 
 <video width="100%" autoplay muted loop>
   <source src="https://puu.sh/J9HAf/be0bade2e5.mp4" type="video/mp4">
