--- a/dgst.html
+++ b/dgst.html
@@ -75,20 +75,21 @@
         <div class="art-sub-header">
           <p> Below are some highlighted segments from the trailer.</p>
 
+        </div>
+        <div class="full-image">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/J9HzZ/39ced80f04.mp4" type="video/mp4">
+          </video>
+        </div>
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/J9HAd/177d7eba2a.mp44" type="video/mp4">
+        </video>
+          <div class="full-image loading-icon">
+          <img src="https://puu.sh/J9HAf/be0bade2e5.mp4">
+        </div></div>
 
-</div> 
-<video width="100%" autoplay muted loop>
-  <source src="https://puu.sh/J9HzZ/39ced80f04.mp4" type="video/mp4">
-</video><br>
 
-<video width="100%" autoplay muted loop>
-  <source src="https://puu.sh/J9HAd/177d7eba2a.mp44" type="video/mp4">
-</video><br>
 
-<video width="100%" autoplay muted loop>
-  <source src="https://puu.sh/J9HAf/be0bade2e5.mp4" type="video/mp4">
-</video>
-</div>
 
 
 
