--- a/dgst.html
+++ b/dgst.html
@@ -83,7 +83,7 @@
         </div>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J9HAd/177d7eba2a.mp44" type="video/mp4">
-        </video></div>
+        </video>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J9HAf/be0bade2e5.mp4" type="video/mp4">
         </video>
