--- a/dgst.html
+++ b/dgst.html
@@ -57,12 +57,13 @@
           <p>I was commissioned to edit and animate the promotional triler for Wayfinder, an Ace Attorney travel themed fanzine featuring 50+ artists and 8+ writers. </p>
 <br>
           <p>Watch the full trailer below:</p>
+
         </div>
-          <div class="full-image loading-icon">
-            <div class="embed-container">
-              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+        <div class="full-image loading-icon">
+          <div class="embed-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=7Vx8RSez-JI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+        </div>
 <br>
       <hr>
     </div>
