--- a/dgst.html
+++ b/dgst.html
@@ -59,10 +59,7 @@
           <p>Watch the full trailer below:</p>
 
         </div>
-        <div class="full-image loading-icon">
-          <div class="embed-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=7Vx8RSez-JI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+       
         </div>
 <br>
       <hr>
@@ -84,7 +81,7 @@
         </div>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J9HAd/177d7eba2a.mp44" type="video/mp4">
-        </video>
+        </video></div>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J9HAf/be0bade2e5.mp4" type="video/mp4">
         </video>
