--- a/dgst.html
+++ b/dgst.html
@@ -79,16 +79,24 @@
             <source src="https://puu.sh/J9HzZ/39ced80f04.mp4" type="video/mp4">
           </video>
         </div>
+        <div class="full-image">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/J9HAf/be0bade2e5.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="full-image">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/J9OeP/a6f771630a.mp4" type="video/mp4">
+          </video>
+        </div>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J9HAd/177d7eba2a.mp44" type="video/mp4">
         </video></div>
-        <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/J9HAf/be0bade2e5.mp4" type="video/mp4">
-        </video>
-        </div></div>
+        
+      </div>
 
 
-
+    
 
 
 
