--- a/dgst.html
+++ b/dgst.html
@@ -59,7 +59,10 @@
           <p>Watch the full trailer below:</p>
 
         </div>
-       
+        <div class="full-image loading-icon">
+          <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>     
         </div>
 <br>
       <hr>
