--- a/dgst.html
+++ b/dgst.html
@@ -95,6 +95,11 @@
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J9HAd/177d7eba2a.mp44" type="video/mp4">
         </video></div>
+        <div class="full-image">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/J9OkR/3a66bb22ee.mp4" type="video/mp4">
+          </video>
+        </div>
         
       </div>
 
