--- a/suiting-up.html
+++ b/suiting-up.html
@@ -69,7 +69,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="art-sub-header">
-          <p>Since the client did not have any creative direction at the start of the project, the IGN Sales Design and Video team decided to try out two different looks to present to the client: <b>A)</b> a mechanical, gritty, weathered down look <b>B)</b> a look inspired by futuristic HUD elements/interface.  I was tasked with the futuristic interface look.</p>
+          <p>Since the client did not have any creative direction at the start of the project, we decided to try out two different looks to present to the client: <b>A)</b> a mechanical, gritty, weathered down look <b>B)</b> a look inspired by futuristic HUD elements/interface.  I was tasked with the futuristic interface look.</p>
           <br>
           <p>Below are first drafts exploring a logo for the show.  I started off with something bold and techy while using visual elements taken from Anthem's javelins just to get a feel for what direction I wanted with the logo. I then trailed off to thinner fonts that would compliment a HUD interface more without overpowering it. </p><br>
         </div>
@@ -127,12 +127,12 @@
         <img src="https://i.imgur.com/UXV7NKl.png">
       </div>
       <p>Animated versions that were templatized for Video team's use.</p>
-      <div class="full-image loading-icon">
-        <img src="https://media.giphy.com/media/K5Lby5SUe5i2DNgs75/source.gif">
+      <div class="full-image">
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/J9Oov/b430a6ecd9.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="full-image loading-icon">
-        <img src="https://media.giphy.com/media/Wx04Fg5Xl34lNe3G8F/source.gif">
-      </div>
+      
       <!-- Row 2 -->
       <div class="art-sub-header">
         <p>First static transition draft I designed based on HUDs and reticles.</p>
@@ -149,6 +149,7 @@
     </div>
     <hr>
   </div>
+
 
   </div>
 
