--- a/anime-omake.html
+++ b/anime-omake.html
@@ -112,7 +112,7 @@
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/Btxeq/cf01b0dafb.mp4" type="video/mp4" poster="1.png">
+            <source src="https://puu.sh/J9OvE/e6521e964a.mp4" type="video/mp4" poster="1.png">
           </video>
         </div>
         <!-- Row 8 -->
@@ -155,14 +155,14 @@
                   </div>
                   <div class="full-image loading-icon">
                     <video width="100%" autoplay muted loop>
-                      <source src="https://puu.sh/I6cz9/c20eac1f8a.mp4" type="video/mp4">
+                      <source src="https://puu.sh/J9OsP/cc791f11bc.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="art-sub-header">
           <p>Transition animation for the video editors to use between scene changes.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/I6cs9/c6d16be7ae.gif">
+          <img src="https://i.imgur.com/S0UQ2WZ.gif">
         </div>
         <!-- Row 10 -->
         <div class="art-sub-header">
@@ -170,7 +170,7 @@
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/I6dup/f17d2a7030.mp4" type="video/mp4">
+            <source src="https://puu.sh/J9Oso/437408d890.mp4" type="video/mp4">
           </video>
         </div>
 
@@ -180,7 +180,7 @@
         </div>
         <div class="full-image">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/BJZo5.mp4" type="video/mp4">
+            <source src="https://puu.sh/J9OBQ/0bce9f45e7.mp4" type="video/mp4">
           </video>
         </div>
         <!-- Row 12 -->
