--- a/anime-omake.html
+++ b/anime-omake.html
@@ -170,7 +170,7 @@
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/J9Oso/437408d890.mp4" type="video/mp4">
+            <source src="https://puu.sh/J9OF0/ddb7cbcadf.mp4" type="video/mp4">
           </video>
         </div>
 
