--- a/anime-omake.html
+++ b/anime-omake.html
@@ -155,7 +155,7 @@
                   </div>
                   <div class="full-image loading-icon">
                     <video width="100%" autoplay muted loop>
-                      <source src="https://puu.sh/J9OsP/cc791f11bc.mp4" type="video/mp4">
+                      <source src="https://puu.sh/J9OIg/9cc7606c7d.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="art-sub-header">
