--- a/anime-omake.html
+++ b/anime-omake.html
@@ -155,11 +155,10 @@
                   </div>
                     <div class="full-image loading-icon">
                       <video width="100%" autoplay muted loop>
-                        <source src="https://puu.sh/J9OIg/9cc7606c7d.mp4" type="video/mp4">
+                        <source src="https://puu.sh/J9Pr1/9d7bf2be1b.mp4" type="video/mp4">
                       </video>
                   </div>
-
-          
+        
 
                   <div class="art-sub-header">
           <p>Transition animation for the video editors to use between scene changes.</p>
