--- a/anime-omake.html
+++ b/anime-omake.html
@@ -71,7 +71,7 @@
 
     <!-- Video Wall-->
     <div class="art-section">
-        <h2>Video Wall and Desk Strip</h2>
+        <h2>The Process</h2>
       <div class="art-display">
         <!-- Row 1 -->
         <div class="art-sub-header">
