--- a/party-chat.html
+++ b/party-chat.html
@@ -86,7 +86,7 @@
         
         </div> 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7kKe/eabee71bc4.mp4" type="video/mp4">
+          <source src="https://puu.sh/J9QiC/a58442fe1e.mp4" type="video/mp4">
         </video>
       </div>
 
