--- a/gaming.html
+++ b/gaming.html
@@ -84,6 +84,10 @@
         </div>
 
         <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/0k3KNOS.gif">
+        </div>
+
+        <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/4H1AvX2Z3bnmPH9laD/giphy.gif">
         </div>
         <div class="half-image loading-icon">
