--- a/ads.html
+++ b/ads.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>General Ads for IGN</h2>
-        <p>Below are some of the frequent client sponsored advertisements I do as part of the in-house Sales Design team at IGN.  Clients hand off assets and direction to us, we use those files to create advertisements to run on IGN's website and/or social media channels, and then send it off for edits and approval.</p>
+        <p>Client sponsored advertisements I do as part of the in-house Sales Design team at IGN.  Clients hand off assets and direction to us, we use those files to create advertisements to run on IGN's website and/or social media channels, and then send it off for edits and approval.</p>
       </div>
       <hr>
     </div>
@@ -118,32 +118,35 @@
       </div>
     </div>
 
-
-
-    <!-- Section 5 -->
-    <div class="art-section">
+    
+     <!-- Section 5 -->
+     <div class="art-section">
       <div class="art-header">
-        <h2>Mortises</h2>
-        <p>Livestream overlays for events like E3 and San Diego Comic-Con. Note: I did not create the branded artwork.</p>
+        <h2>Trilogy Ads</h2>
+        <p>A set of three ads that appear as the user scrolls down the IGN homepage. The topmost banners can have auto-play videos included. Desktop + mobile versions are made.</p>
       </div>
       <div class="art-display">
         <!--Row 1-->
         <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/u18mqEX.jpeg">
+          <img src="https://i.imgur.com/RYwpjSH.png">
         </div>
         <!--Row 2-->
         <div class="full-image loading-icon">
-            <img src="https://66.media.tumblr.com/aff6883e81fa220a2e55ce6199fe1bdf/tumblr_puhqxybCLc1tmp8rdo7_r1_1280.jpg">
+          <img src="https://i.imgur.com/NOVrrdF.png">
+        </div>
+         <!--Row 2-->
+         <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/a9fba648c49fcf8010b11ef01668899a/tumblr_pn73tiAN3l1tmp8rdo5_r1_1280.png">
         </div>
       </div>
     </div>
-    
+
+
 
      <!-- Section 5 -->
      <div class="art-section">
         <div class="art-header">
           <h2>Blockbusters / Skins</h2>
-          <p>Blockbusters have been retired due to the IGN homepage redesign and are now <a class="active-link" target="_blank" href="https://www.kathleenoum.com/roadblock.html">Trilogy Roadblocks</a>.</p>
         </div>
         <div class="art-display">
           <!--Row 1-->
@@ -176,6 +179,24 @@
         <!--Row 3-->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/d3a057c225f465a4205b3fb36a3f851d/tumblr_pj19b9EUTD1tmp8rdo3_r1_1280.jpg">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 5 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Mortises</h2>
+        <p>Livestream overlays for events like E3 and San Diego Comic-Con. Note: I did not create the branded artwork.</p>
+      </div>
+      <div class="art-display">
+        <!--Row 1-->
+        <div class="full-image loading-icon">
+            <img src="https://i.imgur.com/u18mqEX.jpeg">
+        </div>
+        <!--Row 2-->
+        <div class="full-image loading-icon">
+            <img src="https://66.media.tumblr.com/aff6883e81fa220a2e55ce6199fe1bdf/tumblr_puhqxybCLc1tmp8rdo7_r1_1280.jpg">
         </div>
       </div>
     </div>
