--- a/ads.html
+++ b/ads.html
@@ -99,7 +99,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Quicksilvers</h2>
-        <p>Quicksilvers are responsive ads that expand and contract when the user scrolls.</p>
+        <p>Quicksilvers are responsive ads that expand and contract into mobile slates when the user scrolls.</p>
       </div>
       <div class="art-display">
         <!--Row 1-->
@@ -123,7 +123,7 @@
      <div class="art-section">
       <div class="art-header">
         <h2>Trilogy Ads</h2>
-        <p>A set of three ads that appear as the user scrolls down the IGN homepage. The topmost banners can have auto-play videos included. Desktop + mobile versions are made.</p>
+        <p>A set of three ads that appear as the user scrolls down the IGN homepage.</p>
       </div>
       <div class="art-display">
         <!--Row 1-->
