--- a/stinger.html
+++ b/stinger.html
@@ -85,7 +85,7 @@
         </div>
                 <!-- Row 1 -->
                 <div class="half-image loading-icon">
-                  <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/stinger-sample-3_orig.gif">
+                  <img src="https://i.imgur.com/cLfRHRv.gif">
                 </div>
         <!-- Row 1 -->
         <div class="half-image loading-icon">
