--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
     </div>
   </div>
 
-  <div id="content">
-    <!-- Row 1 -->
-    <div class="item">
-      <a href="art.html">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="art"></div>
-        <span>Personal Art</span>
+
       </a>
     </div>
     <div class="item">
@@ -68,6 +63,13 @@
       </a>
     </div>
 
+    <div class="item">
+      <a href="stinger.html">
+        <div class="image-container loading-icon"><img src="https://i.imgur.com/w8q7hg0.gif" alt="motion manga"></div>
+        <span>Stingers / Transitions</span>
+      </a>
+    </div>
+
 
 
               <!-- Row 2 -->
@@ -79,12 +81,13 @@
             </a>
           </div>
 
-          <div class="item">
-            <a href="stinger.html">
-              <div class="image-container loading-icon"><img src="https://i.imgur.com/fMLhMAa.gif" alt="motion manga"></div>
-              <span>Stingers / Transitions</span>
-            </a>
-          </div>
+
+          <div id="content">
+            <!-- Row 1 -->
+            <div class="item">
+              <a href="art.html">
+                <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="art"></div>
+                <span>Personal Art</span>
 
                            <!-- Row 3 -->
 
