--- a/stinger.html
+++ b/stinger.html
@@ -54,7 +54,15 @@
         <h2>Transitions / Stingers</h2>
         <p>Animated transitions for streams and videos. Some are for clients and some are for fun!</p>
       </div>
+
       <div class="art-display">
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/cI0h3Pv.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/yEVOWcd.gif">
+        </div>
+        <!-- Row 0 -->
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/it-s-raining-bears_orig.gif">
         </div>
