--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             <div class="item">
               <a href="art.html">
                 <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="art"></div>
-                <span>Personal Art</span>
+                <span>Personal Art</span>            </a>
+              </div>
 
                            <!-- Row 3 -->
 
