--- a/stinger.html
+++ b/stinger.html
@@ -60,7 +60,7 @@
           <img src="https://i.imgur.com/cI0h3Pv.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://i.imgur.com/yEVOWcd.gif">
+          <img src="https://i.imgur.com/zIjUkrQ.gif">
         </div>
         <!-- Row 0 -->
         <div class="half-image loading-icon">
@@ -71,7 +71,7 @@
         </div>
         <!-- Row 1 -->
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/action-stinger_orig.gif">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/action-stinger-orig_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/stinger-sample-2_orig.gif">
