--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
           <p>I'm a designer and mograph gal with a passion for art, anime, and video games. I love exploring ways design and motion can connect brands with communities, artists, and entertainers. Fandoms are where I thrive! </p>
           <p>Outside of work, I do freelance work for clients ranging from YouTube content creators to Twitch streamers and vtubers. </p>
-          <p>In my free time, you can find me scrolling through the depths of TikTok, streaming Genshin Impact on Twitch, and walking my cats in parks.  If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
+          <p>In my free time, you can find me watching vtubers, streaming Genshin Impact on Twitch, and walking my cats in parks.  If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
 
           <p><a class="active-link" href="https://drive.google.com/file/d/1jDKiI9BGHUxvT6XMgXuB8B7DAMeE9R3z/view?usp=sharing"><u>View my resume</u></a></p>
       </div>
