--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://i.imgur.com/Duew34H.png">
+        <img src="https://i.imgur.com/4ui7Kt4.png">
       </div>
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
