--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
 
-          <p>I'm a designer and mograph gal with a passion for art, anime, and video games. I love exploring ways design and motion can connect brands with communities, artists, and entertainers. Fandoms are where I thrive! </p>
+          <p>I'm a designer and mograph gal based in California with a passion for art, anime, and video games. I love exploring ways design and motion can connect brands with communities, artists, and entertainers. Fandoms are where I thrive! </p>
           <p>Outside of work, I do freelance work for clients ranging from YouTube content creators to Twitch streamers and vtubers. </p>
           <p>In my free time, you can find me watching vtubers, streaming Genshin Impact on Twitch, and walking my cats in parks.  If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
 
