--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </a>
     </div>
     <div class="item">
-      <a href="e3-booth.html">
+      <a href="toy-temple.html">
         <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/1419cb69c81e49a78926c272b98076ee/tumblr_puhqxybCLc1tmp8rdo9_r2_1280.png" alt="e3 booth monitors"></div>
         <span>Toy Temple @ Anime Expo Signage</span>
       </a>
