--- a/stinger.html
+++ b/stinger.html
@@ -67,6 +67,9 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/it-s-raining-bears_orig.gif">
         </div>
         <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/ytmh3Fb.gif">
+        </div>
+        <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pride-stinger_orig.gif">
         </div>
         <!-- Row 1 -->
