--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
           <p>Outside of the hustle, you can find me watching vtubers, streaming Genshin Impact on Twitch, and walking my cats in parks.</p>  
             
-            <p>I'm currently looking for a full-time remote designer position whether it be marketing, production, or animation! If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
+            <p>If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
 
           <p><a class="active-link" href="https://drive.google.com/file/d/1jDKiI9BGHUxvT6XMgXuB8B7DAMeE9R3z/view?usp=sharing"><u>View my resume</u></a></p>
       </div>
