--- a/gaming.html
+++ b/gaming.html
@@ -57,7 +57,7 @@
       </div>
       <div class="art-display">
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/vixella-540_orig.gif">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/vixella-540_1.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif">
@@ -81,6 +81,10 @@
         
         <div class="half-image loading-icon">
           <img src="https://i.imgur.com/YynSuy1.gif">
+        </div>
+
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/TxbcxWg.gif">
         </div>
 
         <div class="half-image loading-icon">
@@ -130,6 +134,9 @@
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter-outro-v2_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/GSauYrQ.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://i.imgur.com/BHFleop.gif">
