--- a/stinger.html
+++ b/stinger.html
@@ -60,8 +60,13 @@
           <img src="https://i.imgur.com/cI0h3Pv.gif">
         </div>
         <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pomato-stinger_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
           <img src="https://i.imgur.com/zIjUkrQ.gif">
         </div>
+        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/phae-stinger_orig.gif">
+      </div>
         <!-- Row 0 -->
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/it-s-raining-bears_orig.gif">
@@ -91,9 +96,6 @@
           <img src="https://i.imgur.com/cjAlSVj.gif">
         </div>
         
-        <div class="half-image loading-icon">
-          <img src="https://i.imgur.com/7tnI56c.gif">
-        </div>
                 <!-- Row 1 -->
                 <div class="half-image loading-icon">
                   <img src="https://i.imgur.com/2AVUmr7.gif">
