--- a/stinger.html
+++ b/stinger.html
@@ -65,6 +65,7 @@
         <div class="half-image loading-icon">
           <img src="https://i.imgur.com/zIjUkrQ.gif">
         </div>
+        <div class="half-image loading-icon">
         <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/phae-stinger_orig.gif">
       </div>
         <!-- Row 0 -->
