--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
     <div class="item">
       <a href="nexon.html">
-        <div class="image-container loading-icon"><img src="https://drive.google.com/file/d/1wkN_lHas4rXTcns_kpMgGycHuvrUMJcH/view?usp=sharing" alt="e3 booth monitors"></div>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExa3F4YjhrdHEwdjY4N202Mmw5NW14cDhoMWN6ZjllZHhueDduMjVnNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/z7gG5yTcJi72CAt4em/giphy-downsized-large.gif" alt="e3 booth monitors"></div>
         <span>MapleStory M Trailers for NEXON</span>
       </a>
     </div>
