--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 
 
                 <div class="item">
-                  <a href="twitch.html">
-                    <div class="image-container loading-icon"><img src="https://puu.sh/I6dl5/4d97e304b0.gif" alt="miniscroller"></div>
-                    <span>Twitch Channel Branding</span>
+                  <a href="vtuber.html">
+                    <div class="image-container loading-icon"><img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGJla2F1ZjRuNXJ4d2JvaTI4em96eWx3eGRuamg2Nnh0c29rc3BudSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/EBE486xwsa7q2PlkGP/giphy.gif" alt="miniscroller"></div>
+                    <span>VTuber Trailers & Showcases</span>
                   </a>
                 </div>
 
@@ -153,15 +153,15 @@
 
 
       <div class="item">
-        <a href="suiting-up.html">
-          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/388a4dd46dcb3f19483e1c065ebd2953/tumblr_pujwwcSWhZ1tmp8rdo10_r1_400.png" alt="Suiting Up"></div>
-          <span>IGN's Suiting Up</span>
+        <a href="animation.html">
+          <div class="image-container loading-icon"><img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZDJjZWJsbmJvYjE0M2VnZDR4enA5MTdmejZoanRreWZ5MWF1b2p5ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MCf3w3kH155gKoKpMK/giphy.gif" alt="Suiting Up"></div>
+          <span>Animated Artwork (pre-drawn)</span>
         </a>
       </div>
     <div class="item">
-      <a href="e3-booth.html">
-        <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/f0bf06cc777d249fc98e0f2883f41bb2/tumblr_pujwwcSWhZ1tmp8rdo9_r1_400.png" alt="e3 booth monitors"></div>
-        <span>IGN Live at E3 - Booth Monitors</span>
+      <a href="lore.html">
+        <div class="image-container loading-icon"><img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWZ1NWMzbHBmamhnaGlpYzdzeTJuczFkOXRrbHBpZmF1Z3o0bnVvMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XSkuClGlENdaMj31J0/giphy.gif" alt="e3 booth monitors"></div>
+        <span>Animated VTuber Lore Video</span>
       </a>
     </div>
     <div class="item">
