--- a/vtuber.html
+++ b/vtuber.html
@@ -81,7 +81,34 @@
         <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/misty_orig.gif">
       </div>
 
-    <!-- Full Videos -->
+   <!-- Full Debut Videos -->
+   <h2>Full Debut Videos</h2>
+
+   <div class="full-image loading-icon">
+    <div class="embed-container">
+      <iframe src="https://www.youtube.com/embed/iBXBpvSSUAA?si=wRe9Qz-757QgpXnn" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    </div>
+
+
+    <div class="full-image loading-icon">
+      <div class="embed-container">
+        <iframe src="https://www.youtube.com/embed/ZZcXtV07oW8?si=Il28JdGeRIf_ZMFD" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      </div>   
+
+
+      <div class="full-image loading-icon">
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/fyRSLAo_1Zw?si=PwT05zobd3iqsle0" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>   
+    
+    <div class="full-image loading-icon">
+      <div class="embed-container">
+        <iframe src="https://youtu.be/ZZcXtV07oW8" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      </div>   
+
+
+    <!-- Full Showcase Videos -->
+    <h2>Full Showcase Videos</h2>
       <div class="full-image loading-icon">
         <div class="embed-container">
           <iframe src="https://youtu.be/7lXA1FbE7xY" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
