--- a/vtuber.html
+++ b/vtuber.html
@@ -86,19 +86,20 @@
 
    <div class="full-image loading-icon">
     <div class="embed-container">
-      <iframe src="https://www.youtube.com/embed/iBXBpvSSUAA?si=wRe9Qz-757QgpXnn" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    </div>
+      <iframe src="https://www.youtube.com/embed/iBXBpvSSUAA" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    </div>     
+  </div>
 
 
     <div class="full-image loading-icon">
       <div class="embed-container">
-        <iframe src="https://www.youtube.com/embed/ZZcXtV07oW8?si=Il28JdGeRIf_ZMFD" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ZZcXtV07oW8" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
       </div>   
 
 
       <div class="full-image loading-icon">
         <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/fyRSLAo_1Zw?si=PwT05zobd3iqsle0" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://www.youtube.com/embed/fyRSLAo_1Zw" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>   
     
     <div class="full-image loading-icon">
